Stop Lenis for correct pos after trans, see desc
- After hero transition there was a mismatch in the scroll pos on the first scroll, this fixes that
- Keep the scrollbar if lenis is stopped but hide it when the app is locked
- Also change the scrollTo API to match Lenis scrollTo
- Still no need for scroll to top!

--- a/stylesheets/generic/base.scss
+++ b/stylesheets/generic/base.scss
@@ -26,7 +26,8 @@
     touch-action: none;
   }
 
-  &.is-loading {
+  &.is-loading,
+  &.is-lock {
     overflow: hidden;
   }
 }
